service-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: default
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: node-app
  type: NodePort
