basic-ingress.yaml
# Enrutador
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  defaultBackend:
    service:
      name: node-app
      port:
        number: 3000
